tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier11UIV-ytf2QCzUSk6ihcYeRbwblw==__UIVEnergyHatch-fnDuNiloR6iXAea0Lhjgtg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2983713540786413750,
  "prerequisites": [
    11163093837006482656
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Woah, another Energy Hatch.\n\nYou should probably consider upgrading your Assembly Lines and Precise Assemblers first.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "UIV Energy Hatch",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    11163093837006482656
  ],
  "rewards": [],
  "tasks": []
}
