tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier11UIV-ytf2QCzUSk6ihcYeRbwblw==__UIVFieldGenerato-q6WN7XY8Qf6PNgWTy7RrBA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 8519757157673233156,
  "prerequisites": [
    3237,
    3242
  ],
  "properties": {
    "auto_claim": false,
    "desc": "A bit expensive, but worth the QoL items you can craft with it.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "UIV Field Generator",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3237,
    3242
  ],
  "rewards": [],
  "tasks": []
}
