tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier11UIV-ytf2QCzUSk6ihcYeRbwblw==__UIVSuperconducto-kvqtI5rrRrOhi5jhPR-s4A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 11163093837006482656,
  "prerequisites": [
    3237
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Didn't expect the Rhugnor, did you?\n\nAs usual, mix your exotic dusts, blast them, form into wires, and superconduct.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "UIV Superconductors",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3237
  ],
  "rewards": [],
  "tasks": []
}
