tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier11UIV-ytf2QCzUSk6ihcYeRbwblw==__YouKnowtheDrillp-AAAAAAAAAAAAAAAAAAAMpQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3237,
  "prerequisites": [
    1684418950670712410,
    15490774631735871952
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Hope you have loads of transcendent metal ingots at the ready. :)",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "You Know the Drill pt.2",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1684418950670712410,
    15490774631735871952
  ],
  "rewards": [],
  "tasks": []
}
